[workspace]
resolver = "2"

members = [
    "crates/scion",
    "crates/scion-grpc",
    "crates/scion-proto",
    "crates/test-utils",
]

[workspace.dependencies]
bytes = "1.5.0"
chrono = { version = "0.4.33", default-features = false }
prost = "0.12"
prost-types = "0.12"
scion-grpc = { version = "0.1.0", path = "crates/scion-grpc" }
thiserror = "1.0.56"
tonic = "0.11"
tonic-build = "0.11"
tracing = "0.1.40"

[workspace.lints.rust]
missing_docs = "warn"
