[workspace]
resolver = "2"

members = [
    "crates/scion",
    "crates/scion-grpc",
    "crates/scion-proto",
    "crates/test-utils",
]

[workspace.dependencies]
bytes = "1.6.1"
chrono = { version = "0.4.38", default-features = false }
prost = "0.13"
prost-types = "0.13"
scion-grpc = { version = "0.1.0", path = "crates/scion-grpc" }
thiserror = "2.0.2"
tonic = "0.12"
tonic-build = "0.12"
tracing = "0.1.40"

[workspace.lints.rust]
missing_docs = "warn"
