[workspace]
resolver = "2"

members = [
    "crates/scion",
    "crates/scion-grpc",
    "crates/scion-proto",
    "crates/test-utils"
]

[workspace.dependencies]
bytes = "1.9.0"
chrono = { version = "0.4.39", default-features = false }
prost = "0.14"
prost-types = "0.14"
scion-grpc = { version = "0.1.0", path = "crates/scion-grpc" }
thiserror = "1.0.69"
tonic = "0.13"
tonic-build = "0.13"
tracing = "0.1.41"

[workspace.lints.rust]
missing_docs = "warn"
