[package]
name = "scion-proto"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
bytes = { workspace = true }
chrono = { version = "0.4.31", default-features = false }
scion-grpc = { workspace = true }
serde = { version = "1.0.188", features = ["derive"] }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
prost-types = { workspace = true }
