[package]
name = "scion-proto"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
bytes = { workspace = true }
chrono = { workspace = true }
scion-grpc = { workspace = true }
serde = { version = "1.0.188", features = ["derive"] }
sha2 = "0.10.8"
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
criterion = "0.5.1"
prost-types = { workspace = true }
rand = "0.8.5"
rand_xorshift = "0.3.0"

[[bench]]
name = "checksum"
harness = false

[lints]
workspace = true
