[package]
name = "scion"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
bytes = "1.5.0"
chrono = { workspace = true, features = ["clock"] }
scion-grpc = { version = "0.1.0", path = "../scion-grpc" }
scion-proto = { version = "0.1.0", path = "../scion-proto" }
thiserror = { workspace = true }
tokio = { version = "1.34.0", features = ["rt-multi-thread", "macros"] }
tonic = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tracing-subscriber = "0.3.17"
